platform_versioned_docs/version-4.2.0/use-platform/troubleshooting/troubleshooting.mdx
---
title: Troubleshooting
sidebar_label: Troubleshooting
sidebar_position: 99
---

import Flow, { Step } from "@site/src/components/Flow";
import PartialAdminSetVersion from "../../_partials/install/set-version.mdx";
import PartialAdminUpgrade from "../../_partials/install/upgrade.mdx";

While we hope you don't run into any issues while deploying vCluster Platform, it sometimes happens. This
page contains some information that may help you resolve deployment issues. If you're still
stuck,  join us on [Slack](https://slack.loft.sh/) where you can find a #vcluster channel
where you can ask other questions.

## Troubleshooting Tips

### Flag `--reset`

If you need a clean vCluster Platform installation, you can use the `--reset` flag to tell vCluster CLI to purge
any previous vCluster Platform installs:

```bash
vcluster platform start --reset    # --insecure  ...add any other `vcluster platform start` flags if needed
```

### Debug `ImageErr` + `ImagePullBackOff`

If your vCluster Platform pods are not starting because the vCluster Platform images cannot be pulled, you may need to
use a private image registry rather than
pulling vCluster Platform images from over the internet.

### Use Port-Forwarding

You can always try to connect to vCluster Platform directly and circumvent any potential networking issues
introduced at the load balancer and ingress controller level.

To start port-forwarding, either use `vcluster platform start` or run:

```bash
kubectl port-forward deploy/loft -n vcluster-platform 8080:10443
```

After that you can access vCluster Platform at `https://localhost:8080`. You can even login with the vCluster CLI
to this URL with:

```bash
vcluster platform login localhost:8080 --insecure
```

If you can access vCluster Platform via port-forwarding only, this is usually an indicator that the problem
might be related to a misconfigured LoadBalancer or Ingress Controller.
